Добавлен запрос на получение популярных треков; исправлены баги
