# internal/api/http/handlers/music.go
@@ -25,6 +25,19 @@ func NewMusicHandlers(interactor usecase.MusicInteractor, presenter presenter.Mu
 	}
 }
 
+// GetAllHandler godoc
+// @Summary Получение всех треков
+// @Description Получение всех треков
+// @Tags Music
+// @Accept json
+// @Produce plain
+// @Security JwtAuth
+// @Success 200 {object} []view.MusicView "Данные трека"
+// @Failure 400 "Некорректный запрос"
+// @Failure 401 "Неавторизованный запрос"
+// @Failure 404 "Пользователь не найден"
+// @Failure 500 "Внутренняя ошибка сервера"
+// @Router /music/catalog [get]
 func (m *musicHandlers) GetAll(c *gin.Context) {
 	ctx := context.Background()
 	musics, err := m.interactor.GetAll(ctx)
@@ -34,6 +47,42 @@ func (m *musicHandlers) GetAll(c *gin.Context) {
 	c.JSON(http.StatusOK, m.presenter.ToListMusicView(musics)) //Проверить вывод
 }
 
+// GetAndSortByPopularHandler godoc
+// @Summary Получение треков отсортированных по популярности
+// @Description Получение треков отсортированных по популярности
+// @Tags Music
+// @Accept json
+// @Produce plain
+// @Security JwtAuth
+// @Success 200 {object} []view.MusicView "Список треков"
+// @Failure 400 "Некорректный запрос"
+// @Failure 401 "Неавторизованный запрос"
+// @Failure 404 "Пользователь не найден"
+// @Failure 500 "Внутренняя ошибка сервера"
+// @Router /music/catalog/popular [get]
+func (m *musicHandlers) GetAndSortByPopular(c *gin.Context) {
+	ctx := context.Background()
+	musics, err := m.interactor.GetAndSortByPopular(ctx)
+	if err != nil {
+		c.AbortWithError(http.StatusInternalServerError, fmt.Errorf("can't get user: %w", err))
+	}
+	c.JSON(http.StatusOK, m.presenter.ToListMusicView(musics))
+}
+
+// CreateHandler godoc
+// @Summary Создание трека
+// @Description Создание нового трека
+// @Tags Music
+// @Accept json
+// @Produce plain
+// @Security JwtAuth
+// @Param request body entity.MusicCreate true "Данные трека"
+// @Success 201 "Трек создан"
+// @Failure 400 "Некорректный запрос"
+// @Failure 401 "Неавторизованный запрос"
+// @Failure 404 "Пользователь не найден"
+// @Failure 500 "Внутренняя ошибка сервера"
+// @Router /music/new [post]
 func (m *musicHandlers) Create(c *gin.Context) {
 	ctx := context.Background()
 	body, err := c.GetRawData()
@@ -52,9 +101,23 @@ func (m *musicHandlers) Create(c *gin.Context) {
 	if err != nil {
 		c.AbortWithError(http.StatusInternalServerError, fmt.Errorf("can't create music: %w", err))
 	}
-	c.JSON(http.StatusOK, nil)
+	c.JSON(http.StatusCreated, nil)
 }
 
+// UpdateHandler godoc
+// @Summary Обновление трека
+// @Description Обновление трека
+// @Tags Music
+// @Accept json
+// @Produce plain
+// @Security JwtAuth
+// @Param request body entity.MusicCreate true "Данные трека"
+// @Success 200 "Трек обновлен"
+// @Failure 400 "Некорректный запрос"
+// @Failure 401 "Неавторизованный запрос"
+// @Failure 404 "Пользователь не найден"
+// @Failure 500 "Внутренняя ошибка сервера"
+// @Router /music/{id} [put]
 func (m *musicHandlers) Update(c *gin.Context) {
 	ctx := context.Background()
 	body, err := c.GetRawData()
@@ -65,11 +128,17 @@ func (m *musicHandlers) Update(c *gin.Context) {
 
 	var music entity.MusicDB
 	music.Id, err = uuid.Parse(c.Param("id"))
+	if err != nil {
+		c.AbortWithError(http.StatusUnprocessableEntity, fmt.Errorf("can't get id: %w", err))
+		return
+	}
+
 	err = json.Unmarshal(body, &music)
 	if err != nil {
 		c.AbortWithError(http.StatusUnprocessableEntity, fmt.Errorf("can't unmarshal body: %w", err))
 		return
 	}
+
 	err = m.interactor.Update(ctx, &music)
 	if err != nil {
 		c.AbortWithError(http.StatusInternalServerError, fmt.Errorf("can't update music: %w", err))
@@ -77,6 +146,20 @@ func (m *musicHandlers) Update(c *gin.Context) {
 	c.JSON(http.StatusOK, nil)
 }
 
+// DeleteHandler godoc
+// @Summary Удаление трека
+// @Description Удаление трека
+// @Tags Music
+// @Accept json
+// @Produce plain
+// @Security JwtAuth
+// @Param id path string true "id трека"
+// @Success 204 "Трек удален"
+// @Failure 400 "Некорректный запрос"
+// @Failure 401 "Неавторизованный запрос"
+// @Failure 404 "Пользователь не найден"
+// @Failure 500 "Внутренняя ошибка сервера"
+// @Router /music/{id} [delete]
 func (m *musicHandlers) Delete(c *gin.Context) {
 	ctx := context.Background()
 
