# internal/api/http/view/music.go
@@ -4,3 +4,7 @@ type MusicView struct {
 	ID   string `json:"id"`
 	Name string `json:"name"`
 }
+
+type ListMusicView struct {
+	Musics []*MusicView `json:"musics"`
+}
